# rust-bindings

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build-and-test.yml  code-style.yml  release.yml
examples/: precice-config.xml
examples/solverdummy/: .gitignore  main.rs
src/: lib.rs  precice-bridge.cpp  precice-bridge.hpp
