[package]
name = "precice"
version = "2.5.0"
authors = ["Frédéric Simonis (fsimonis)"]
edition = "2021"
description = "Rust bindinds for precice"
documentation = "https://precice.org/installation-bindings-rust"
homepage = "https://precice.org"
license = "LGPL-3.0-or-later"
repository = "https://github.com/precice/rust-bindings"
keywords = ["parallel", "bindings", "pyhsics", "multi-physics" , "mpi" ]
categories = ["science", "simulation","external-ffi-bindings"]
links = "precice"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3"
semver = "1"
clap = "2.9"

[[example]]
name = "solverdummy"
